--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,83 @@
-
+annotated-types==0.7.0
+av==11.0.0
+bidict==0.23.1
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+coloredlogs==15.0.1
+ctranslate2==4.5.0
+faster-whisper==1.0.1
+ffmpeg-python==0.2.0
+filelock==3.17.0
+Flask==3.1.0
+Flask-SocketIO==5.5.1
+flatbuffers==20181003210633
+fsspec==2024.12.0
+future==1.0.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.66.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+h11==0.14.0
+httplib2==0.22.0
+huggingface_hub==0.28.1
+humanfriendly==10.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+kaldialign==0.9.1
+keyboard==0.13.5
+llvmlite==0.44.0
+MarkupSafe==3.0.2
+more-itertools==10.6.0
+mpmath==1.3.0
+networkx==3.4.2
+numba==0.61.0
+numpy==1.26.4
+onnxruntime==1.16.0
+openai-whisper==20240930
+opencv-python==4.11.0.86
+packaging==24.2
+pillow==11.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyAudio==0.2.14
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyparsing==3.2.1
+pyserial==3.5
+python-dotenv==1.0.1
+python-engineio==4.11.2
+python-socketio==5.12.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rsa==4.9
+scipy==1.15.1
+simple-websocket==1.1.0
+soundfile==0.13.1
+sympy==1.13.1
+tiktoken==0.8.0
+tokenizers==0.15.2
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tqdm==4.67.1
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+websocket-client==1.8.0
+websockets==14.2
+Werkzeug==3.1.3
+wsproto==1.2.0
